[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/SizeSelect.gd" type="Script" id=1]

[node name="SizeSelect" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -205.0
margin_right = 120.0
margin_bottom = 205.0
custom_constants/separation = 10
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 240.0
margin_bottom = 50.0
rect_min_size = Vector2( 240, 50 )
text = "3x3"

[node name="Button2" type="Button" parent="."]
margin_top = 60.0
margin_right = 240.0
margin_bottom = 110.0
rect_min_size = Vector2( 240, 50 )
text = "4x4"

[node name="Button3" type="Button" parent="."]
margin_top = 120.0
margin_right = 240.0
margin_bottom = 170.0
rect_min_size = Vector2( 240, 50 )
text = "5x5"

[node name="Button4" type="Button" parent="."]
margin_top = 180.0
margin_right = 240.0
margin_bottom = 230.0
rect_min_size = Vector2( 240, 50 )
text = "6x6"

[node name="Button5" type="Button" parent="."]
margin_top = 240.0
margin_right = 240.0
margin_bottom = 290.0
rect_min_size = Vector2( 240, 50 )
text = "7x7"

[node name="Button6" type="Button" parent="."]
margin_top = 300.0
margin_right = 240.0
margin_bottom = 350.0
rect_min_size = Vector2( 240, 50 )
text = "8x8"

[node name="Button7" type="Button" parent="."]
margin_top = 360.0
margin_right = 240.0
margin_bottom = 410.0
rect_min_size = Vector2( 240, 50 )
text = "9x9"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
